# ideal-garbanzo

./: .gitattributes  .gitignore  ARCHITECTURE.md  BUILD.md  CLAUDE.md  CMakeLists.txt  README.md  SERVER.md  UI_PLAN.md
.github/workflows/: ci.yml
ci/: host-smoke.sh  sim-sdl-free.sh  smoke-test.sh
server/: saltmarch_host.c
src/: agent.c  agent.h  build_confirm_ui.c  build_confirm_ui.h  building.c  building.h  camera.c  camera.h  client.c  client.h  command.c  command.h  fonts.c  fonts.h  game.c  game.h  input.c  input.h  island.c  main.c  map.c  map.h  net.c  net.h  population.c  population.h  render.c  render.h  replay.c  replay.h  replay_main.c  resource.c  resource.h  ship.c  ship.h  simlog.c  simlog.h  tier_upgrade_ui.c  tier_upgrade_ui.h  ui.c  (+3 more)
tests/: run.sh  test_command_funnel.c  test_headless.c  test_lockstep.c  test_server.c
